--- a/index-german.html
+++ b/index-german.html
@@ -439,205 +439,76 @@
             <h2 id="portfolio-heading">Mein Portfolio</h2>
           </div>
           <div class="h3-title">
-            <h3 class="carousel-title">Lieblingsprojekte</h3>
-          </div>
-          <div class="slider-box carousel-box">
-            <div class="floating-carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item">
-                  <a
-                    href="./Projects/Crazy-Cow/index.html"
-                    aria-label="Crazy Cow JavaScript Projektlink"
-                    target="_blank"
-                  >
-                    <img
-                      src="./Projects screenshots/Crazy-Cow-Project.webp"
-                      alt="Projekt 1 Crazy Cow Project"
-                      loading="lazy"
-                    />
-                  </a>
-                  <div class="carousel-item-info">
-                    <a
-                      href="./Projects/Crazy-Cow/index.html"
-                      aria-label="Crazy Cow JavaScript Projektlink"
-                      target="_blank"
-                    >
-                      <h4>Crazy Cow</h4>
-                    </a>
-                    <p>
-                      Dies ist die erste Seite, die ich selbst erstellt habe,
-                      indem ich HTML, CSS und JavaScript kombiniert habe.
-                      Klicken Sie auf die Bilder, schalten Sie die Lautsprecher
-                      ein und genießen Sie!
-                    </p>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <a
-                    href="https://github.com/DraculadyCode/Animal-World"
-                    aria-label="Animal-World Projekt pure JavaScript Link"
-                    target="_blank"
-                  >
-                    <img
-                      src="./Projects screenshots/Animal-World-Project.webp"
-                      alt="Projekt 2 Animal World Tamaguchi JavaScript"
-                      loading="lazy"
-                    />
-                  </a>
-                  <div class="carousel-item-info">
-                    <a
-                      href="https://github.com/DraculadyCode/Animal-World"
-                      aria-label="Animal-World Projekt pure JavaScript Link"
-                      target="_blank"
-                    >
-                      <h4>Animal World - reines JS Tamagotchi-Spiel</h4>
-                    </a>
-                    <p>
-                      Ein Tamagotchi-Spiel, das ich als Abschlussprojekt für das
-                      Thema JavaScript erstellt habe. Alle Erklärungen finden
-                      Sie in der Readme-Datei.
-                    </p>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <a
-                    href="./Projects/Uriya-Peled-Pivate-Teacher/index.html"
-                    aria-label="Private Teacher Freiberufliche Webseite Uriya Peled Link"
-                    target="_blank"
-                  >
-                    <img
-                      src="./Projects screenshots/Uriya-Private-Teacher-Project.webp"
-                      alt="Projekt 3 Private Teacher Freiberufliche Webseite Uriya Peled"
-                      loading="lazy"
-                    />
-                  </a>
-                  <div class="carousel-item-info">
-                    <a
-                      href="./Projects/Uriya-Peled-Pivate-Teacher/index.html"
-                      aria-label="Private Teacher Freiberufliche Webseite Uriya Peled Link"
-                      target="_blank"
-                    >
-                      <h4>
-                        Uriya Peled - Private Teacher Freiberufliche Webseite
-                      </h4>
-                    </a>
-                    <p>
-                      Eine Webseite, die ich speziell für meinen Bruder erstellt
-                      habe, um ihm zu helfen, eine neue Karriere als
-                      freiberuflicher Privatlehrer zu starten. Das Projekt
-                      befindet sich noch in Arbeit.
-                    </p>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <a
-                    href="./Projects/Pokemon Project/index.html"
-                    aria-label="Pokémon Information Suchseite Projektlink"
-                    target="_blank"
-                  >
-                    <img
-                      src="./Projects screenshots/Pokemon-Project.webp"
-                      alt="Projekt 4 Pokemon Suche Informationen mit API"
-                      loading="lazy"
-                    />
-                  </a>
-                  <div class="carousel-item-info">
-                    <a
-                      href="./Projects/Pokemon Project/index.html"
-                      aria-label="Pokémon Information Suchseite Projektlink"
-                      target="_blank"
-                    >
-                      <h4>Poke-pedia - Umfassende Pokémon-Informationen</h4>
-                    </a>
-                    <p>
-                      Dieses Einzelseitenprojekt integriert JavaScript mit einer
-                      externen Datenbank. Suchen Sie nach einem Pokémon, um
-                      detaillierte Informationen zu erhalten.
-                    </p>
-                  </div>
-                </div>
-                <!-- Weitere Karussell-Elemente nach Bedarf hinzufügen -->
-              </div>
-              <button
-                class="carousel-control prev"
-                aria-label="Previous slide"
-                onclick="moveSlide(-1)"
-              >
-                <i class="fa-solid fa-chevron-left" aria-hidden="true"></i>
-              </button>
-              <button
-                class="carousel-control next"
-                aria-label="Next slide"
-                onclick="moveSlide(1)"
-              >
-                <i class="fa-solid fa-chevron-right" aria-hidden="true"></i>
-              </button>
-            </div>
-          </div>
-          <div class="h3-title">
             <h3>Beispielprojekte</h3>
           </div>
           <div class="slider-box">
             <div class="slider">
               <span style="--i: 1"
                 ><a
-                  href="./Projects/Whitney Houston Website/Whitney Houston Project.html"
+                  href="./Projects/Guess the color/index.html"
                   target="_blank"
-                  aria-label="Whitney Houston Tribute Website"
+                  aria-label="Guess the color JavaScript game"
                   ><img
-                    src="./Projects screenshots/Project_3.webp"
+                    src="./Projects screenshots/Guess_The_Color.webp"
                     loading="lazy"
-                    alt="Project 3" /></a
+                    alt="Guess the color JavaScript game" /></a
               ></span>
 
-              <span style="--i: 2"
-                ><a
-                  href="./Projects/Forms small project/index.html"
+              <span style="--i: 2">
+                <a
+                  href="./Projects/Crazy-Cow/index.html"
+                  aria-label="Crazy Cow JavaScript Project link"
                   target="_blank"
-                  aria-label="Forms single page project"
-                  ><img
-                    src="./Projects screenshots/Project_4.webp"
+                >
+                  <img
+                    src="./Projects screenshots/Crazy-Cow-Project.webp"
+                    alt="Project 1 Crazy Cow Project"
                     loading="lazy"
-                    alt="Project 4" /></a
-              ></span>
+                  />
+                </a>
+                ></span
+              >
 
-              <span style="--i: 3"
-                ><a
-                  href="./Projects/Bootstrap project 2/index.html"
+              <span style="--i: 3">
+                <a
+                  href="./Projects/Pokemon Project/index.html"
+                  aria-label="Private Teacher freelance website Uriya Peled link"
                   target="_blank"
-                  aria-label="Bootstrap single page project"
-                  ><img
-                    src="./Projects screenshots/Project_12.webp"
+                >
+                  <img
+                    src="./Projects screenshots/Pokemon-Project.webp"
+                    alt="Project 4 Pokemon Search information with API"
                     loading="lazy"
-                    alt="Project 12" /></a
+                  /> </a
               ></span>
 
               <span style="--i: 4"
                 ><a
-                  href="./Projects/Build a blog/index.html"
+                  href="https://kathrinkath.github.io/Deployment-ex/"
                   target="_blank"
-                  aria-label="Pet rats blog project"
+                  aria-label="Tic-Tak-Toe Game"
                   ><img
-                    src="./Projects screenshots/Project_13.webp"
+                    src="./Projects screenshots/Tic-Tac-Toe.webp"
                     loading="lazy"
-                    alt="Project 13" /></a
+                    alt="Tic-Tak-Toe Game" /></a
               ></span>
 
-              <span style="--i: 5"
-                ><a
-                  href="./Projects/Log in form/index.html"
+              <span style="--i: 5">
+                <a
+                  href="./Projects/Uriya-Peled-Pivate-Teacher/index.html"
+                  aria-label="Private Teacher freelance website Uriya Peled link"
                   target="_blank"
-                  aria-label="Log in form single page project"
-                  ><img
-                    src="./Projects screenshots/Project_19.webp"
+                >
+                  <img
+                    src="./Projects screenshots/Uriya-Private-Teacher-Project.webp"
+                    alt="Project 3 Private Teacher freelance website Uriya Peled"
                     loading="lazy"
-                    alt="Project 19" /></a
+                  /> </a
               ></span>
 
               <span style="--i: 6"
                 ><a
                   href="./Projects/Visit card example/index.html"
-                  loading="lazy"
                   target="_blank"
                   aria-label="Visit card blur effect single page project"
                   ><img
@@ -646,16 +517,19 @@
                     alt="Project 22" /></a
               ></span>
 
-              <span style="--i: 7"
-                ><a
-                  href="./Projects/responsive text and links/index.html"
+              <span style="--i: 7">
+                <a
+                  href="https://draculadycode.github.io/World-Trivia/"
+                  aria-label="Trivia-World project pure React link"
                   target="_blank"
-                  aria-label="responsive text and links single page project"
-                  ><img
-                    src="./Projects screenshots/Project_23.webp"
+                >
+                  <img
+                    src="./Projects screenshots/World-Trivia.webp"
+                    alt="Trivia-World project pure React"
                     loading="lazy"
-                    alt="Project 23" /></a
-              ></span>
+                  />
+                </a>
+              </span>
 
               <span style="--i: 8"
                 ><a
