--- a/index.html
+++ b/index.html
@@ -443,8 +443,7 @@
                     loading="lazy"
                   />
                 </a>
-                ></span
-              >
+              </span>
 
               <span style="--i: 3">
                 <a
