--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -769,7 +769,7 @@
     </main>
     <footer>
       <div class="container">
-        <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
+        <p>&copy; 2024 Kathrin Peled - My Portfolio</p>
         <div class="logo">
           <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
