--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -476,7 +476,7 @@
     </main>
     <footer>
       <div class="container">
-        <p>&copy; 2024 Kathrin Peled - Mein erstes Portfolio</p>
+        <p>&copy; 2024 Kathrin Peled - Mein Portfolio</p>
         <div class="logo">
           <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
