--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -961,7 +961,7 @@
     </main>
     <footer>
       <div class="container">
-        <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
+        <p>&copy; 2024 Kathrin Peled - Mein Portfolio</p>
         <div class="logo">
           <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
