--- a/index-german.html
+++ b/index-german.html
@@ -826,7 +826,7 @@
     </main>
     <footer>
       <div class="container">
-        <p>&copy; 2024 Kathrin Peled - Mein erstes Portfolio</p>
+        <p>&copy; 2024 Kathrin Peled - Mein Portfolio</p>
         <div class="logo">
           <a
             href="./Pages/sitemap.html"
