--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
     </main>
     <footer>
       <div class="container">
-        <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
+        <p>&copy; 2024 Kathrin Peled - My Portfolio</p>
         <div class="logo">
           <a
             href="./Pages/sitemap.html"
