updated files page

--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -264,12 +264,85 @@
       aria-label="Main files english section"
     >
       <section class="download-files" aria-labelledby="download-files-title">
-        <div class="my-files">
-          <div class="container">
-            <div class="h2-title">
-              <h2 id="download-files-title">Download my documents</h2>
+        <div class="container">
+          <div class="h2-title">
+            <h2 id="download-files-title">Download my documents</h2>
+          </div>
+          <div class="all-files">
+            <div class="file-item">
+              <div class="file-title">
+                <h3 title="Translated to German">Full Resume 🇬🇧</h3>
+              </div>
+              <img
+                src="../FIles-Images/IMG CV Full resume.webp"
+                alt="Image of full resume"
+              />
+              <a
+                href="../Files/Kathrin_Peled_Resume_10.2024.pdf"
+                aria-label="Download my extended resume in English"
+                download
+              >
+                <div class="button-div">
+                  <button>Download</button>
+                </div></a
+              >
             </div>
-            <div class="files">
+            <div class="file-item">
+              <div class="file-title">
+                <h3 title="Translated to German">Prof. Resume 🇬🇧</h3>
+              </div>
+              <img
+                src="../FIles-Images/IMG CV English.webp"
+                alt="Image of professional English resume"
+              />
+              <a
+                href="../Files/Kathrin Peled Professional Resume.pdf"
+                aria-label="Download my professional resume in English"
+                download
+              >
+                <div class="button-div">
+                  <button>Download</button>
+                </div>
+              </a>
+            </div>
+            <div class="file-item">
+              <div class="file-title">
+                <h3 title="Translated to German">Prof. Resume 🇩🇪</h3>
+              </div>
+              <img
+                src="../FIles-Images/IMG CV German.webp"
+                alt="Image of professional German resume"
+              />
+              <a
+                href="../Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
+                aria-label="Download my professional resume in German"
+                download
+              >
+                <div class="button-div">
+                  <button>Download</button>
+                </div>
+              </a>
+            </div>
+            <div class="file-item">
+              <div class="file-title">
+                <h3 title="Translated to German">My Diplom 🇩🇪</h3>
+              </div>
+              <img
+                src="../FIles-Images/IMG Diplom.webp"
+                alt="Image of Diplom certificate"
+              />
+              <a
+                href="../Files/Diplom Übersetzung 2023.pdf"
+                aria-label="Download my Diplom in German"
+                download
+              >
+                <div class="button-div">
+                  <button>Download</button>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- <div class="files">
               <a
                 href="../Files/Diplom Übersetzung 2023.pdf"
                 download
@@ -335,8 +408,7 @@
                   </div>
                 </div>
               </a>
-            </div>
-          </div>
+            </div> -->
         </div>
       </section>
       <div class="languages">
