--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -271,75 +271,80 @@
       aria-label="Main files german section"
     >
       <section class="download-files" aria-labelledby="download-files-title">
-        <div class="my-files">
-          <div class="container">
-            <div class="h2-title">
-              <h2 id="download-files-title">Lade Maine Dateien Herunter</h2>
-            </div>
-            <div class="files">
+        <div class="container">
+          <div class="h2-title">
+            <h2 id="download-files-title">Lade Maine Dateien Herunter</h2>
+          </div>
+          <div class="all-files">
+            <div class="file-item">
+              <div class="file-title">
+                <h3 title="Translated to German">Lebenslauf 🇬🇧</h3>
+              </div>
+              <img
+                src="../FIles-Images/IMG CV Full resume.webp"
+                alt="Image of full resume"
+              />
               <a
-                href="../Files/Diplom Übersetzung 2023.pdf"
-                download
-                aria-label="Download my diploma in German"
-              >
-                <div class="file-item">
-                  <div class="file-icon">
-                    <i class="fa-solid fa-user-graduate" aria-hidden="true"></i>
-                  </div>
-                  <div class="file-list">
-                    <span title="Translated to German">
-                      Mein
-                      <strong>Diplom</strong> 🇩🇪
-                    </span>
-                  </div>
-                </div>
-              </a>
-              <a
-                href="../Files/Kathrin Peled Resume 10.2024.pdf"
+                href="../Files/Kathrin_Peled_Resume_10.2024.pdf"
                 aria-label="Download my extended resume in English"
                 download
               >
-                <div class="file-item">
-                  <div class="file-icon">
-                    <i class="fa-solid fa-file" aria-hidden="true"></i>
-                  </div>
-                  <div class="file-list">
-                    <span title="Extended version of my CV">
-                      Vollständigen <strong>Lebenslauf</strong> 🇬🇧
-                    </span>
-                  </div>
-                </div>
-              </a>
+                <div class="button-div">
+                  <button>Herunterladen</button>
+                </div></a
+              >
+            </div>
+            <div class="file-item">
+              <div class="file-title">
+                <h3 title="Translated to German">Prof. Resume 🇬🇧</h3>
+              </div>
+              <img
+                src="../FIles-Images/IMG CV English.webp"
+                alt="Image of professional English resume"
+              />
               <a
                 href="../Files/Kathrin Peled Professional Resume.pdf"
                 aria-label="Download my professional resume in English"
                 download
               >
-                <div class="file-item">
-                  <div class="file-icon">
-                    <i class="fa-solid fa-user-tie" aria-hidden="true"></i>
-                  </div>
-                  <div class="file-list">
-                    <span title="Resume with relevant experience only">
-                      <strong>Beruflichen Lebenslauf</strong> 🇬🇧
-                    </span>
-                  </div>
+                <div class="button-div">
+                  <button>Herunterladen</button>
                 </div>
               </a>
+            </div>
+            <div class="file-item">
+              <div class="file-title">
+                <h3 title="Translated to German">Prof. Resume 🇩🇪</h3>
+              </div>
+              <img
+                src="../FIles-Images/IMG CV German.webp"
+                alt="Image of professional German resume"
+              />
               <a
                 href="../Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
+                aria-label="Download my professional resume in German"
                 download
-                aria-label="Download my professional Resume in German"
               >
-                <div class="file-item">
-                  <div class="file-icon">
-                    <i class="fa-solid fa-user-tie" aria-hidden="true"></i>
-                  </div>
-                  <div class="file-list">
-                    <span title="Lebenslauf mit nur relevanter Erfahrung">
-                      <strong>Beruflichen Lebenslauf</strong> 🇩🇪
-                    </span>
-                  </div>
+                <div class="button-div">
+                  <button>Herunterladen</button>
+                </div>
+              </a>
+            </div>
+            <div class="file-item">
+              <div class="file-title">
+                <h3 title="Translated to German">Mein Diplom 🇩🇪</h3>
+              </div>
+              <img
+                src="../FIles-Images/IMG Diplom.webp"
+                alt="Image of Diplom certificate"
+              />
+              <a
+                href="../Files/Diplom Übersetzung 2023.pdf"
+                aria-label="Download my Diplom in German"
+                download
+              >
+                <div class="button-div">
+                  <button>Herunterladen</button>
                 </div>
               </a>
             </div>
