--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -324,6 +324,14 @@
       </section>
       <section id="social-media-3d" aria-labelledby="social-medias-title 3d">
         <div class="container">
+          <div class="h2-title">
+            <h2 id="social-medias-title">
+              Kontaktiere mich hier...<i
+                class="fa-regular fa-face-smile"
+                aria-hidden="true"
+              ></i>
+            </h2>
+          </div>
           <div class="social-media-3d-menu">
             <ul>
               <li
@@ -467,12 +475,7 @@
       <section id="social-medias" aria-labelledby="social-medias-title">
         <div class="container">
           <div class="h2-title">
-            <h2 id="social-medias-title">
-              Kontaktiere mich hier...<i
-                class="fa-regular fa-face-smile"
-                aria-hidden="true"
-              ></i>
-            </h2>
+            <h2 id="social-medias-title">Finde mich hier</h2>
           </div>
           <div class="contact-options-divs">
             <div class="contact-directly">
