--- a/index-german.html
+++ b/index-german.html
@@ -620,6 +620,12 @@
               </div>
               <div><p>React</p></div>
             </div>
+            <div class="skill">
+              <div>
+                <i class="fa-brands fa-node-js" aria-hidden="true"></i>
+              </div>
+              <div><p>Node JS</p></div>
+            </div>
           </div>
           <div class="h3-title">
             <h3>Werkzeuge & Plattformen, die ich benutze</h3>
