--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -323,6 +323,14 @@
       </section>
       <section id="social-media-3d" aria-labelledby="social-medias-title 3d">
         <div class="container">
+          <div class="h2-title">
+            <h2 id="social-medias-title">
+              Contact Me Here...<i
+                class="fa-regular fa-face-smile"
+                aria-hidden="true"
+              ></i>
+            </h2>
+          </div>
           <div class="social-media-3d-menu">
             <ul>
               <li
@@ -466,12 +474,7 @@
       <section id="social-medias" aria-labelledby="social-medias-title">
         <div class="container">
           <div class="h2-title">
-            <h2 id="social-medias-title">
-              Contact Me Here...<i
-                class="fa-regular fa-face-smile"
-                aria-hidden="true"
-              ></i>
-            </h2>
+            <h2 id="social-medias-title">Find Me Here</h2>
           </div>
           <div class="contact-options-divs">
             <div class="contact-directly">
