--- a/index.html
+++ b/index.html
@@ -597,6 +597,12 @@
               </div>
               <div><p>React</p></div>
             </div>
+            <div class="skill">
+              <div>
+                <i class="fa-brands fa-node-js" aria-hidden="true"></i>
+              </div>
+              <div><p>Node JS</p></div>
+            </div>
           </div>
           <div class="h3-title">
             <h3>Tools & Platforms I Use</h3>
