corrections for files page

--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -273,12 +273,12 @@
       <section class="download-files" aria-labelledby="download-files-title">
         <div class="container">
           <div class="h2-title">
-            <h2 id="download-files-title">Lade Maine Dateien Herunter</h2>
+            <h2 id="download-files-title">Lade Meine Dateien Herunter</h2>
           </div>
           <div class="all-files">
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Translated to German">Lebenslauf 🇬🇧</h3>
+                <h3 title="Full resume in English">Lebenslauf 🇬🇧</h3>
               </div>
               <img
                 src="../FIles-Images/IMG CV Full resume.webp"
@@ -296,7 +296,7 @@
             </div>
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Translated to German">Prof. Resume 🇬🇧</h3>
+                <h3 title="Professional resume in English">Prof. Resume 🇬🇧</h3>
               </div>
               <img
                 src="../FIles-Images/IMG CV English.webp"
@@ -314,7 +314,7 @@
             </div>
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Translated to German">Prof. Resume 🇩🇪</h3>
+                <h3 title="Professional resume in German">Prof. Resume 🇩🇪</h3>
               </div>
               <img
                 src="../FIles-Images/IMG CV German.webp"
