corrections for files page

--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -278,7 +278,9 @@
           <div class="all-files">
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Full resume in English">Lebenslauf 🇬🇧</h3>
+                <h3 title="Vollständiger Lebenslauf auf Englisch">
+                  Lebenslauf 🇬🇧
+                </h3>
               </div>
               <img
                 src="../FIles-Images/IMG CV Full resume.webp"
@@ -296,7 +298,9 @@
             </div>
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Professional resume in English">Prof. Resume 🇬🇧</h3>
+                <h3 title="Professioneller Lebenslauf auf Englisch">
+                  Prof. Resume 🇬🇧
+                </h3>
               </div>
               <img
                 src="../FIles-Images/IMG CV English.webp"
@@ -314,7 +318,9 @@
             </div>
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Professional resume in German">Prof. Resume 🇩🇪</h3>
+                <h3 title="Professioneller Lebenslauf auf Deutsch">
+                  Prof. Resume 🇩🇪
+                </h3>
               </div>
               <img
                 src="../FIles-Images/IMG CV German.webp"
@@ -332,7 +338,7 @@
             </div>
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Translated to German">Mein Diplom 🇩🇪</h3>
+                <h3 title="Diplom ins Deutsche übersetzt">Mein Diplom 🇩🇪</h3>
               </div>
               <img
                 src="../FIles-Images/IMG Diplom.webp"
