corrections for index page

--- a/index-german.html
+++ b/index-german.html
@@ -466,8 +466,7 @@
                     loading="lazy"
                   />
                 </a>
-                ></span
-              >
+              </span>
 
               <span style="--i: 3">
                 <a
@@ -625,6 +624,10 @@
                 <i class="fa-brands fa-node-js" aria-hidden="true"></i>
               </div>
               <div><p>Node JS</p></div>
+            </div>
+            <div class="skill">
+              <div><i class="bx bxl-mongodb" aria-hidden="true"></i></div>
+              <div>Mongo DB</div>
             </div>
           </div>
           <div class="h3-title">
