--- a/index.html
+++ b/index.html
@@ -603,6 +603,10 @@
               </div>
               <div><p>Node JS</p></div>
             </div>
+            <div class="skill">
+              <div><i class="bx bxl-mongodb" aria-hidden="true"></i></div>
+              <div>Mongo DB</div>
+            </div>
           </div>
           <div class="h3-title">
             <h3>Tools & Platforms I Use</h3>
