corrections for robots file

--- a/index-german.html
+++ b/index-german.html
@@ -627,7 +627,7 @@
             </div>
             <div class="skill">
               <div><i class="bx bxl-mongodb" aria-hidden="true"></i></div>
-              <div>Mongo DB</div>
+              <div><p>Mongo DB</p></div>
             </div>
           </div>
           <div class="h3-title">
