updated contact pages

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -467,6 +467,48 @@
                   >Xing</a
                 >
               </li>
+              <li
+                data-text="Skype"
+                class="skype-list-item"
+                style="--i: 4; --clr: #00aff0"
+              >
+                <a
+                  href="skype:live:.cid.fa37e5044b0a120f?chat"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Skype contact, opens in Skype app"
+                >
+                  <span>
+                    <i
+                      class="fa-brands fa-skype"
+                      aria-hidden="true"
+                      title="Skype: live:.cid.fa37e5044b0a120f"
+                    ></i>
+                  </span>
+                  Skype
+                </a>
+              </li>
+              <li
+                data-text="Discord"
+                class="discord-list-item"
+                style="--i: 5; --clr: #5865f2"
+              >
+                <a
+                  href="https://discord.com/users/draculadycode"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Discord profile of Draculady Code, opens in a new tab"
+                >
+                  <span>
+                    <i
+                      class="fa-brands fa-discord"
+                      aria-hidden="true"
+                      title="Discord: https://discord.com/users/draculadycode"
+                    ></i>
+                  </span>
+                  Discord
+                </a>
+              </li>
             </ul>
           </div>
         </div>
