--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -452,7 +452,7 @@
               <li
                 data-text="Xing"
                 class="xing-list-item"
-                style="--i: 3; --clr: #007a33"
+                style="--i: 3; --clr: #b7df4b"
               >
                 <a
                   href="https://www.xing.com/profile/Kathrin_Peled/web_profiles"
