--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -430,23 +430,25 @@
                 >
               </li>
               <li
-                data-text="GitHub"
-                class="github-list-item"
-                style="--i: 2; --clr: #181717"
+                data-text="Signal"
+                class="signal-list-item"
+                style="--i: 2; --clr: #3ea6e3"
               >
                 <a
-                  href="https://github.com/DraculadyCode"
+                  href="https://join.signal.org/#p/+4917685639174"
                   target="_blank"
                   rel="noopener noreferrer"
-                  aria-label="GitHub profile of DraculadyCode, opens in a new tab"
-                  ><span>
-                    <i
-                      class="fa-brands fa-github"
-                      aria-hidden="true"
-                      title="GitHub: https://github.com/DraculadyCode"
-                    ></i></span
-                  >GitHub</a
+                  aria-label="Signal profile, opens in a new tab"
                 >
+                  <span>
+                    <i
+                      class="fa-brands fa-signal-messenger"
+                      aria-hidden="true"
+                      title="Signal: +4917685639174"
+                    ></i>
+                  </span>
+                  Signal
+                </a>
               </li>
               <li
                 data-text="Xing"
@@ -690,6 +692,34 @@
                         title="Discord: https://discord.com/users/draculadycode"
                       ></i
                     ></a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://join.signal.org/#p/+4917685639174"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Contact me on Signal"
+                    >
+                      <i
+                        class="fa-brands fa-signal-messenger"
+                        aria-hidden="true"
+                        title="Signal: +4917685639174"
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="skype:live:.cid.fa37e5044b0a120f"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Contact me on Skype"
+                    >
+                      <i
+                        class="fa-brands fa-skype"
+                        aria-hidden="true"
+                        title="Skype: live:.cid.fa37e5044b0a120f"
+                      ></i>
+                    </a>
                   </li>
                 </ul>
               </div>
