contact card and business card

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -724,6 +724,20 @@
                 </ul>
               </div>
             </div>
+            <div class="visit-card">
+              <div class="h3-title">
+                <h3>Save me as a contact</h3>
+              </div>
+              <a href="../Files/Contact-Card.vcf" download>
+                <button>Download VCF</button>
+              </a>
+              <div class="business-card">
+                <img
+                  src="../Files/Email-Signature.png"
+                  alt="Email-Signature business card"
+                />
+              </div>
+            </div>
           </div>
         </div>
       </section>
