--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -725,6 +725,20 @@
                 </ul>
               </div>
             </div>
+            <div class="visit-card">
+              <div class="h3-title">
+                <h3>Speichere mich als Kontakt</h3>
+              </div>
+              <a href="../Files/Contact-Card.vcf" download>
+                <button>VCF herunterladen</button>
+              </a>
+              <div class="business-card">
+                <img
+                  src="../Files/Email-Signature.png"
+                  alt="Email-Signature business card"
+                />
+              </div>
+            </div>
           </div>
         </div>
       </section>
