contact card and business card

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -732,10 +732,12 @@
                 <button>Download VCF</button>
               </a>
               <div class="business-card">
-                <img
-                  src="../Files/Email-Signature.png"
-                  alt="Email-Signature business card"
-                />
+                <a href="../Files/Email-Signature.png" download>
+                  <img
+                    src="../Files/Email-Signature.png"
+                    alt="Email-Signature business card"
+                  />
+                </a>
               </div>
             </div>
           </div>
