--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -733,10 +733,12 @@
                 <button>VCF herunterladen</button>
               </a>
               <div class="business-card">
+                <a href="../Files/Email-Signature.png" download>
                 <img
                   src="../Files/Email-Signature.png"
                   alt="Email-Signature business card"
                 />
+                </a>
               </div>
             </div>
           </div>
