contact card and business card

--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -733,7 +733,7 @@
                 <button>VCF herunterladen</button>
               </a>
               <div class="business-card">
-                <a href="../Files/Email-Signature.png" download>
+                <a href="../Files/Email-Signature.png" download="Kathrin Peled Card.png">
                 <img
                   src="../Files/Email-Signature.png"
                   alt="Email-Signature business card"
