--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -732,7 +732,10 @@
                 <button>Download VCF</button>
               </a>
               <div class="business-card">
-                <a href="../Files/Email-Signature.png" download>
+                <a
+                  href="../Files/Email-Signature.png"
+                  download="Kathrin Peled Card.png"
+                >
                   <img
                     src="../Files/Email-Signature.png"
                     alt="Email-Signature business card"
