--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -725,19 +725,33 @@
                 </ul>
               </div>
             </div>
-            <div class="visit-card">
+            <div class="visit-card" role="document">
               <div class="h3-title">
-                <h3>Speichere mich als Kontakt</h3>
+                <h3 id="contact-card-title">Speichere mich als Kontakt</h3>
               </div>
-              <a href="../Files/Contact-Card.vcf" download>
-                <button>VCF herunterladen</button>
+              <a
+                href="../Files/Contact-Card.vcf"
+                download
+                aria-labelledby="contact-title"
+              >
+                <button aria-label="Download VCF file of Kathrin Peled">
+                  VCF herunterladen
+                </button>
               </a>
+              <div class="h3-title">
+                <h3 id="business-card-title">Meine Visitenkarte speichern</h3>
+              </div>
               <div class="business-card">
-                <a href="../Files/Email-Signature.png" download="Kathrin Peled Card.png">
-                <img
-                  src="../Files/Email-Signature.png"
-                  alt="Email-Signature business card"
-                />
+                <a
+                  href="../Files/Email-Signature.png"
+                  download="Kathrin Peled Card.png"
+                  aria-labelledby="business-card-title"
+                >
+                  <img
+                    src="../Files/Email-Signature.png"
+                    alt="Email-Signature business card for Kathrin Peled"
+                    role="img"
+                  />
                 </a>
               </div>
             </div>
