--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -340,18 +340,20 @@
                 style="--i: -3; --clr: #1877f2"
               >
                 <a
-                  href="https://www.facebook.com/profile.php?id=61563925780935"
+                  href="https://m.me/61563925780935"
                   target="_blank"
                   rel="noopener noreferrer"
-                  aria-label="Facebook profile of Kathrin Peled, opens in a new tab"
-                  ><span>
-                    <i
-                      class="fa-brands fa-facebook"
-                      aria-hidden="true"
-                      title="Facebook: https://www.facebook.com/profile.php?id=61563925780935"
-                    ></i></span
-                  >Facebook</a
+                  aria-label="Message Kathrin Peled on Facebook Messenger, opens in a new tab"
                 >
+                  <span>
+                    <i
+                      class="fa-brands fa-facebook-messenger"
+                      aria-hidden="true"
+                      title="Message on Facebook Messenger"
+                    ></i>
+                  </span>
+                  Facebook
+                </a>
               </li>
               <li
                 data-text="Telegram"
@@ -719,6 +721,20 @@
                         class="fa-brands fa-skype"
                         aria-hidden="true"
                         title="Skype: live:.cid.fa37e5044b0a120f"
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://m.me/61563925780935"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Message Kathrin Peled on Facebook Messenger"
+                    >
+                      <i
+                        class="fa-brands fa-facebook-messenger"
+                        aria-hidden="true"
+                        title="Message on Messenger"
                       ></i>
                     </a>
                   </li>
